名前が違うと反映されない模様。なので中身を移して既存は削除

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,14 @@
 *.app
 
 # this vs project
-*.vs/
+D3D11MinRender/.vs/
 *.db
 *.opendb
+*.log
+*/*/Debug/
+*/Debug/
+*/*/Release/
+*/Release/
+*.ilk
+*.pdb
+*.idb
