--- a/D3D11MinRender/D3D11MinRender/D3D11MinRender.vcxproj
+++ b/D3D11MinRender/D3D11MinRender/D3D11MinRender.vcxproj
@@ -29,7 +29,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -116,6 +116,21 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Sources\Entry.cpp" />
+    <ClCompile Include="Sources\IndexDrawer.cpp" />
+    <ClCompile Include="Sources\Main.cpp" />
+    <ClCompile Include="Sources\Render.cpp" />
+    <ClCompile Include="Sources\Scene.cpp" />
+    <ClCompile Include="Sources\Window.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Sources\IndexDrawer.h" />
+    <ClInclude Include="Sources\IRender.h" />
+    <ClInclude Include="Sources\Main.h" />
+    <ClInclude Include="Sources\ps_test.h" />
+    <ClInclude Include="Sources\Render.h" />
+    <ClInclude Include="Sources\Scene.h" />
+    <ClInclude Include="Sources\vs_test.h" />
+    <ClInclude Include="Sources\Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
