SRV作成用のWIC導入

--- a/D3D11MinRender/D3D11MinRender/D3D11MinRender.vcxproj
+++ b/D3D11MinRender/D3D11MinRender/D3D11MinRender.vcxproj
@@ -121,6 +121,7 @@
     <ClCompile Include="Sources\Main.cpp" />
     <ClCompile Include="Sources\Render.cpp" />
     <ClCompile Include="Sources\Scene.cpp" />
+    <ClCompile Include="Sources\WICTextureLoader.cpp" />
     <ClCompile Include="Sources\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -132,6 +133,7 @@
     <ClInclude Include="Sources\Render.h" />
     <ClInclude Include="Sources\Scene.h" />
     <ClInclude Include="Sources\vs_test.h" />
+    <ClInclude Include="Sources\WICTextureLoader.h" />
     <ClInclude Include="Sources\Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
